Fixed single pricing not being center aligned

--- a/src/main/webapp/bundles/health_v4/less/dualPricing.less
+++ b/src/main/webapp/bundles/health_v4/less/dualPricing.less
@@ -212,6 +212,7 @@ body[data-step="results"]:not(.moreInfoVisible) {
           float: none;
           text-align: center;
           width: auto;
+          margin-top: 0px;
         }
       }
     }
