--- a/src/main/webapp/bundles/health_v4/less/results/results.less
+++ b/src/main/webapp/bundles/health_v4/less/results/results.less
@@ -340,13 +340,13 @@
       min-height: 47px;
     }
     @media (@lg) {
-      .frequencyAmount, .lhcText {
-        float: left;
-        width: 50%;
-        min-height: auto;
+      .frequencyAmount {
+        width: 100%;
+        margin-top: 10px;
       }
 
       .lhcText {
+        min-height: auto;
         padding-bottom: 0;
         text-align: right;
         .small;
